--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,82 +1,10 @@
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-9');
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-
-*,
-*:before,
-*:after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-:focus,
-:active {
-    outline: none;
-}
-
-a:focus,
-a:active {
-    outline: none;
-}
-
-html,
-body {
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-input,
-button,
-textarea {}
-
-input::-ms-clear {
-    display: none;
-}
-
-button {
-    cursor: pointer;
-}
-
-button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
-}
-
-a,
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-ul li {
-    list-style: none;
-}
-
-img {
-    vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-    padding: 0;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 .container {
     max-width: 1594px;
     width: 100%;
     margin: 0 auto;
+    padding: 0px 50px;
     @media all and(max-width: 1200px) {
         max-width: 1140px;
         width: 100%;
@@ -85,149 +13,301 @@ h6 {
     @media all and(max-width: 992px) {
         max-width: 960px;
         width: 100%;
-        padding: 0px 16px;
+        padding: 0px 0px;
     }
     @media all and(max-width: 576px) {
         width: 100%;
         margin: 0;
-        padding: 0px 18px;
+        // padding: 0px 18px;
     }
 }
 
 .header {
     background: #373A3C;
-    &__logo {}
-    &__nav {
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 }
 
+.logo {
+    img {}
+}
 
-/* стили для ПК */
+.nav {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: #373A3C;
+    overflow: hidden;
+}
 
-#menu {
-    display: flex;
-    align-items: center;
-    @media all and(max-width: 576px) {
-        display: table;
-        visibility: visible;
+.menu a {
+    display: block;
+    font-size: 16px;
+    padding: 20px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.example {
+    padding-top: 12px;
+    @media all and(max-width: 850px) {
+        padding-left: 16px;
     }
+    @media all and(max-width: 576px) {}
 }
 
-#menu li {
+form.example input[type=text] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid grey;
+    background: #f1f1f1;
+    border-radius: 4px;
+}
+
+.menu a:hover {
+    color: #FFFFFF;
+}
+
+.nav {
+    max-height: 0;
+    transition: max-height .5s ease-out;
+    z-index: 2;
+}
+
+
+/* Menu Icon */
+
+.hamb {
+    cursor: pointer;
+    float: right;
+    padding: 40px 20px;
+}
+
+
+/* Style label tag */
+
+.hamb-line {
+    background: #ffffff;
     display: block;
-    float: left;
+    height: 2px;
     position: relative;
-}
-
-#menu li a {
-    display: table;
-    padding: 0 20px;
-    height: 50px;
-    text-align: center;
-    font: 600 13px/50px arial;
-    color: #fff;
-    text-decoration: none;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    display: flex;
-    align-items: center;
-}
-
-.menu__icon::after {
-    content: "\f078";
-    font-family: "FontAwesome";
-    color: #8DD83D;
-    padding-left: 7px;
-}
-
-._prof::before {
-    content: "\f007";
-    font-family: "FontAwesome";
-    color: #8DD83D;
-    padding-right: 7px;
-}
-
-#menu li:first-child a {}
-
-#menu li:last-child a {}
-
-#menu li:hover a {}
-
-#menu li:hover .sub-menu a {
-    background: #f3f3f3;
-    color: #2f3036;
-    height: 40px;
-    line-height: 40px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-}
-
-#menu li:hover .sub-menu a:hover {
-    color: #8DD83D;
+    width: 24px;
 }
 
 
-/* стили для выпадающего списка */
+/* Style span tag */
 
-.sub-menu {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    z-index: -1;
-    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
-    left: 0;
-}
-
-#menu li:hover>ul {
-    visibility: visible;
-    opacity: 1;
-    transition-delay: 0s;
-    z-index: 1;
-}
-
-#menu .sub-menu li {
-    float: none;
-    border-top: 1px solid #dddddd;
-}
-
-#menu .sub-menu li a {
-    width: auto;
-    min-width: 100%;
-    padding: 0 11px;
-    white-space: nowrap;
-    text-align: center;
-    border: none;
-    box-shadow: none;
-}
-
-#menu li a:hover+.sub-menu,
-.sub-menu:hover {
+.hamb-line::before,
+.hamb-line::after {
+    background: #FFFFFF;
+    content: '';
     display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.hamb-line::before {
+    top: 5px;
+}
+
+.hamb-line::after {
+    top: -5px;
+}
+
+.side-menu {
+    display: none;
 }
 
 
-/* стили для адаптивности */
+/* Hide checkbox */
 
-@media screen and (max-width: 760px) {
-    .sub-menu {
-        position: static;
+
+/* Menu Icon */
+
+.hamb {
+    cursor: pointer;
+    float: right;
+    padding: 40px 20px;
+}
+
+
+/* Style label tag */
+
+.hamb-line {
+    background: #FFFFFF;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 24px;
+}
+
+
+/* Style span tag */
+
+.hamb-line::before,
+.hamb-line::after {
+    background: #FFFFFF;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.hamb-line::before {
+    top: 5px;
+}
+
+.hamb-line::after {
+    top: -5px;
+}
+
+.side-menu {
+    display: none;
+}
+
+
+/* Toggle menu icon */
+
+.side-menu:checked~nav {
+    max-height: 100%;
+}
+
+.side-menu:checked~.hamb .hamb-line {
+    background: transparent;
+}
+
+.side-menu:checked~.hamb .hamb-line::before {
+    transform: rotate(-45deg);
+    top: 0;
+}
+
+.side-menu:checked~.hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top: 0;
+}
+
+
+/* Toggle menu icon */
+
+.side-menu:checked~nav {
+    max-height: 100%;
+}
+
+.side-menu:checked~.hamb .hamb-line {
+    background: transparent;
+}
+
+.side-menu:checked~.hamb .hamb-line::before {
+    transform: rotate(-45deg);
+    top: 0;
+}
+
+.side-menu:checked~.hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top: 0;
+}
+
+@media (min-width: 768px) {
+    .nav {
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+    }
+    .menu li {
+        float: left;
+    }
+    .menu a:hover {
+        background-color: transparent;
+        color: gray;
+    }
+    .hamb {
         display: none;
     }
-    .sub-menu li {
-        margin-bottom: 1px;
+}
+
+.footer__row {
+    display: flex;
+    padding-bottom: 49px;
+}
+
+.footer__row-col ul {
+    list-style: none;
+}
+
+.footer {
+    background: #373A3C;
+    padding: 70px 0;
+    &__copyright {
+        border-top: 1px solid #aaaaaa;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 19px;
+        p {
+            font-size: 16px;
+            line-height: 19px;
+            /* identical to box height */
+            color: #FFFFFF;
+        }
     }
-    #menu li,
-    #menu li a {
-        width: 100%;
-        border: none;
-        padding: 0px;
-    }
-    #menu .sub-menu li a {
-        padding: 0px;
-    }
-    #menu {
-        width: 100%;
-    }
+}
+
+.footer__row-col {
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer__row-col h4 {
+    font-size: 18px;
+    color: #8DD83D;
+    margin-bottom: 35px;
+    font-weight: 500;
+}
+
+.footer__row-col h4::before {}
+
+.footer__row-col ul li:not(:last-child) {
+    margin-bottom: 29px;
+}
+
+.footer__row-col ul li a {
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    display: block;
+    transition: all 0.3s ease;
+}
+
+.footer__row-col ul li a:hover {
+    color: #8DD83D;
+    padding-left: 8px;
+}
+
+.footer__row-col .social-links a {
+    display: inline-block;
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #8DD83D;
+    transition: all 0.5s ease;
+}
+
+.__pos {
+    display: flex;
+    flex-direction: column;
 }
