--- a/css/games.css
+++ b/css/games.css
@@ -37,7 +37,7 @@ body {
 }
 
 .main {
-  background: url(../img/bg/CoD-WWII.png);
+  background: url(../img/bg/bg-CoD-WWII.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
