--- a/scss/index.scss
+++ b/scss/index.scss
@@ -83,7 +83,6 @@
             background: #8DD83D;
             font-size: 16px;
             border-radius: 4px;
-            color: #FFFFFF;
         }
         button a {
             font-size: 16px;
@@ -102,3 +101,88 @@
 }
 
 // aside конец-----------------------------------------------------------------
+// design начало---------------------------------------------------------------
+// design конец----------------------------------------------------------------
+.design {
+    background: url(../img/bg/bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    height: 100vh;
+    @media all and(max-width: 1200px) {
+        height: 80%;
+    }
+    &__wrapper {
+        padding: 160px 0px 145px 130px;
+        @media all and(max-width: 1200px) {
+            padding: 140px 0px 135px 115px;
+        }
+        @media all and(max-width: 992px) {
+            padding: 115px 0px 115px 100px;
+        }
+        @media all and(max-width: 576px) {
+            padding: 70px 0px 70px 60px;
+        }
+    }
+    &__title {
+        h4 {
+            font-size: 52px;
+            color: #FFFFFF;
+            font-weight: 400;
+            @media all and(max-width: 1200px) {
+                font-size: 48px;
+            }
+            @media all and(max-width: 992px) {
+                font-size: 42px;
+            }
+            @media all and(max-width: 576px) {
+                font-size: 36px;
+            }
+        }
+        p {
+            font-size: 28px;
+            line-height: 38px;
+            color: #FFFFFF;
+            padding: 20px 0px 40px 0px;
+            @media all and(max-width: 1200px) {
+                font-size: 26px;
+            }
+            @media all and(max-width: 992px) {
+                font-size: 22px;
+            }
+            @media all and(max-width: 576px) {
+                font-size: 18px;
+            }
+        }
+    }
+    &__btn {
+        button a {
+            color: #FFFFFF;
+            font-size: 16px;
+        }
+    }
+    &__btn-lab {
+        background: linear-gradient(180deg, #686C6F 0%, #373A3C 100%);
+        border-radius: 4px;
+        padding: 22px 46px;
+        color: #FFFFFF;
+        @media all and(max-width: 1200px) {
+            padding: 20px 44px;
+        }
+        @media all and(max-width: 992px) {
+            padding: 18px 40px;
+            flex-wrap: wrap;
+        }
+    }
+}
+
+._lab-color {
+    background: #8DD83D;
+    border-radius: 4px;
+    margin-left: 10px;
+    @media all and(max-width: 1200px) {}
+    @media all and(max-width: 992px) {
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+}
