--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
-  height: 100vh;
+  height: 638px;
 }
 
 @media all and (max-width: 1200px) {
