--- a/css/slider.css
+++ b/css/slider.css
@@ -73,6 +73,20 @@
   transition: all .3s;
 }
 
+@media all and (max-width: 992px) {
+  #slider_bl .slider-dot-control label {
+    width: 9px;
+    height: 9px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  #slider_bl .slider-dot-control label {
+    width: 6px;
+    height: 6px;
+  }
+}
+
 #slider_bl .slider-dot-control label:hover {
   background: #ccc;
   border-color: #777;
@@ -186,7 +200,7 @@
   #slider_bl .info.top-games {
     padding: 0px 1.5em 0px 0px;
     font-size: 28px;
-    line-height: 15px;
+    line-height: 20px;
   }
 }
 
