--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,6 @@
 }
 
 .header {
-  background: #373A3C;
-  top: 0;
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,6 +40,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background: #373A3C;
+  z-index: 2;
 }
 
 .header__wrapper {
@@ -57,12 +60,20 @@
           align-items: center;
 }
 
+@media all and (max-width: 992px) {
+  .logo img {
+    padding-left: 15px;
+  }
+}
+
 .nav {
   width: 100%;
   height: 100%;
   position: fixed;
   background: #373A3C;
   overflow: hidden;
+  top: 82px;
+  left: 0;
 }
 
 .menu a {
@@ -255,6 +266,29 @@ form.example input[type=text] {
   padding-bottom: 49px;
 }
 
+@media all and (max-width: 1200px) {
+  .footer__row {
+    padding-bottom: 40px;
+  }
+}
+
+@media all and (max-width: 992px) {
+  .footer__row {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 30px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer__row {
+    padding-bottom: 0px;
+  }
+}
+
 .footer__row-col ul {
   list-style: none;
 }
@@ -262,6 +296,12 @@ form.example input[type=text] {
 .footer {
   background: #373A3C;
   padding: 70px 0;
+}
+
+@media all and (max-width: 576px) {
+  .footer {
+    padding: 20px 0;
+  }
 }
 
 .footer__copyright {
@@ -285,6 +325,13 @@ form.example input[type=text] {
 .footer__row-col {
   width: 25%;
   padding: 0 15px;
+}
+
+@media all and (max-width: 576px) {
+  .footer__row-col {
+    width: 35%;
+    padding: 15px 15px;
+  }
 }
 
 .footer__row-col h4 {
