--- a/css/slider.css
+++ b/css/slider.css
@@ -73,6 +73,27 @@
   transition: all .3s;
 }
 
+@media all and (max-width: 1200px) {
+  #slider_bl .slider-dot-control label {
+    width: 9px;
+    height: 9px;
+  }
+}
+
+@media all and (max-width: 992px) {
+  #slider_bl .slider-dot-control label {
+    width: 8px;
+    height: 8px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  #slider_bl .slider-dot-control label {
+    width: 5px;
+    height: 5px;
+  }
+}
+
 #slider_bl .slider-dot-control label:hover {
   background: #ccc;
   border-color: #777;
@@ -178,7 +199,7 @@
   #slider_bl .info.top-games {
     padding: 0px 1.5em 0px 0px;
     font-size: 28px;
-    line-height: 25px;
+    line-height: 30px;
   }
 }
 
@@ -186,13 +207,13 @@
   #slider_bl .info.top-games {
     padding: 0px 1.5em 0px 0px;
     font-size: 28px;
-    line-height: 15px;
   }
 }
 
 @media all and (max-width: 576px) {
   #slider_bl .info.top-games {
     font-size: 20px;
+    line-height: 20px;
   }
 }
 
