--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 2;
 }
 
 .header__wrapper {
@@ -57,12 +60,58 @@
           align-items: center;
 }
 
+@media all and (max-width: 992px) {
+  .logo {
+    padding-left: 15px;
+  }
+}
+
 .nav {
   width: 100%;
   height: 100%;
   position: fixed;
   background: #373A3C;
-  overflow: hidden;
+  top: 80px;
+}
+
+@media all and (max-width: 768px) {
+  .nav {
+    overflow: hidden;
+  }
+}
+
+.nav {
+  max-height: 0;
+  -webkit-transition: max-height .5s ease-out;
+  transition: max-height .5s ease-out;
+  z-index: 2;
+}
+
+@media (min-width: 768px) {
+  .nav {
+    max-height: none;
+    top: 0;
+    position: relative;
+    float: right;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media all and (max-width: 768px) {
+  .menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .menu a {
@@ -72,13 +121,94 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
+@media all and (max-width: 992px) {
+  .menu a {
+    padding: 18px;
+  }
+}
+
+@media all and (max-width: 850px) {
+  .menu a {
+    padding: 12px;
+  }
+}
+
+.menu a:hover {
+  color: #FFFFFF;
+}
+
+.menu li {
+  position: relative;
+}
+
+.menu > li:hover .menu__subitem {
+  opacity: 1;
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+.menu__item:after {
+  content: "\f107";
+  font-family: "FontAwesome";
+  color: inherit;
+  margin-left: 10px;
+  color: #8DD83D;
+}
+
+.menu__item:hover::after {
+  content: "\f106";
+  font-family: "FontAwesome";
+  color: #8DD83D;
+}
+
+.menu__subitem {
+  background: #373A3C;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  z-index: 5;
+  width: 180px;
+  opacity: 0;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+.menu__subitem a {
+  color: white;
+  text-align: left;
+  padding: 12px 15px;
+  font-size: 13px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+@media (max-width: 768px) {
+  .menu__subitem a:hover {
+    background-color: transparent;
+    color: gray;
+  }
+}
+
+.menu__subitem li:last-child a {
+  border-bottom: none;
+}
+
 .example {
   padding-top: 12px;
 }
 
+@media all and (max-width: 992px) {
+  .example {
+    padding: 10px 0px 0px 16px;
+  }
+}
+
 @media all and (max-width: 850px) {
   .example {
-    padding-left: 16px;
+    padding: 4px 0px 0px 10px;
   }
 }
 
@@ -90,15 +220,18 @@ form.example input[type=text] {
   border-radius: 4px;
 }
 
-.menu a:hover {
-  color: #FFFFFF;
+@media all and (max-width: 992px) {
+  form.example input[type=text] {
+    font-size: 15px;
+    padding: 8px;
+  }
 }
 
-.nav {
-  max-height: 0;
-  -webkit-transition: max-height .5s ease-out;
-  transition: max-height .5s ease-out;
-  z-index: 2;
+@media all and (max-width: 850px) {
+  form.example input[type=text] {
+    font-size: 13px;
+    padding: 8px;
+  }
 }
 
 /* Menu Icon */
@@ -106,6 +239,12 @@ form.example input[type=text] {
   cursor: pointer;
   float: right;
   padding: 40px 20px;
+}
+
+@media (min-width: 768px) {
+  .hamb {
+    display: none;
+  }
 }
 
 /* Style label tag */
@@ -226,33 +365,33 @@ form.example input[type=text] {
   top: 0;
 }
 
-@media (min-width: 768px) {
-  .nav {
-    max-height: none;
-    top: 0;
-    position: relative;
-    float: right;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .menu li {
-    float: left;
-  }
-  .menu a:hover {
-    background-color: transparent;
-    color: gray;
-  }
-  .hamb {
-    display: none;
-  }
-}
-
 .footer__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding-bottom: 49px;
+}
+
+@media all and (max-width: 992px) {
+  .footer__row {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 28px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer__row {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 0px;
+  }
 }
 
 .footer__row-col ul {
@@ -264,6 +403,19 @@ form.example input[type=text] {
   padding: 70px 0;
 }
 
+@media all and (max-width: 992px) {
+  .footer {
+    padding: 60px 0;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer {
+    padding: 40px 0;
+    text-align: center;
+  }
+}
+
 .footer__copyright {
   border-top: 1px solid #aaaaaa;
   display: -webkit-box;
@@ -273,6 +425,20 @@ form.example input[type=text] {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 19px;
+}
+
+@media all and (max-width: 992px) {
+  .footer__copyright {
+    padding-top: 15px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer__copyright {
+    padding-top: 10px;
+  }
 }
 
 .footer__copyright p {
@@ -287,11 +453,36 @@ form.example input[type=text] {
   padding: 0 15px;
 }
 
+@media all and (max-width: 992px) {
+  .footer__row-col {
+    width: 30%;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer__row-col {
+    width: 40%;
+    padding: 0px 0px 20px 0px;
+  }
+}
+
 .footer__row-col h4 {
   font-size: 18px;
   color: #8DD83D;
   margin-bottom: 35px;
   font-weight: 500;
+}
+
+@media all and (max-width: 992px) {
+  .footer__row-col h4 {
+    margin-bottom: 25px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .footer__row-col h4 {
+    margin-bottom: 20px;
+  }
 }
 
 .footer__row-col ul li:not(:last-child) {
