--- a/scss/games.scss
+++ b/scss/games.scss
@@ -79,14 +79,12 @@ body {
                 padding: 12px 30px;
             }
             @media all and(max-width: 768px) {
-                padding: 10px 26px;
+                padding: 10px 28px;
                 margin-bottom: 10px;
                 display: flex;
                 flex-direction: column;
             }
-            @media all and(max-width: 572px) {
-                padding: 8px 20px;
-            }
+            @media all and(max-width: 572px) {}
         }
         a:hover {
             background: #81c03d;
