--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,6 +4,15 @@
 .aside {
     padding: 72px 0 162px 0px;
     background: radial-gradient(100% 100% at 50% 0%, #686C6F 0%, #373A3C 100%);
+    @media all and(max-width: 1200px) {
+        padding: 66px 0 142px 0px;
+    }
+    @media all and(max-width: 992px) {
+        padding: 58px 0 122px 0px;
+    }
+    @media all and(max-width: 576px) {
+        padding: 48px 0 80px 0px;
+    }
     &__wrapper {
         display: flex;
         flex-direction: column;
@@ -50,6 +59,8 @@
         flex-wrap: wrap;
     }
     &__card {
+        width: 320px;
+        height: 420px;
         background: #FFFFFF;
         border: 1px solid #8DD83D;
         border-radius: 4px;
@@ -170,7 +181,9 @@
         }
         @media all and(max-width: 992px) {
             padding: 18px 40px;
-            flex-wrap: wrap;
+        }
+        @media all and(max-width: 576px) {
+            padding: 16px 34px;
         }
     }
 }
