--- a/css/index.css
+++ b/css/index.css
@@ -119,12 +119,28 @@
   border: 1px solid #8DD83D;
   border-radius: 4px;
   line-height: 29px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.aside__card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media all and (max-width: 992px) {
   .aside__card {
     margin-bottom: 20px;
   }
+}
+
+.card {
+  width: 100%;
+}
+
+.card__img img {
+  width: 318px;
+  height: 180px;
 }
 
 .card__description {
@@ -153,6 +169,10 @@
   background: #8DD83D;
   font-size: 16px;
   border-radius: 4px;
+}
+
+.card__button button:hover {
+  background: #67a525;
 }
 
 .card__button button a {
@@ -194,13 +214,14 @@
 
 @media all and (max-width: 992px) {
   .design__wrapper {
-    padding: 115px 0px 115px 100px;
+    padding: 80px 20px;
+    text-align: center;
   }
 }
 
 @media all and (max-width: 576px) {
   .design__wrapper {
-    padding: 70px 0px 70px 60px;
+    padding: 40px 0px 40px 00px;
   }
 }
 
@@ -266,6 +287,11 @@
   color: #FFFFFF;
 }
 
+.design__btn-lab:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, #686C6F), color-stop(0%, #373A3C));
+  background: linear-gradient(180deg, #686C6F 100%, #373A3C 0%);
+}
+
 @media all and (max-width: 1200px) {
   .design__btn-lab {
     padding: 20px 44px;
@@ -288,6 +314,10 @@
   background: #8DD83D;
   border-radius: 4px;
   margin-left: 10px;
+}
+
+._lab-color:hover {
+  background: #67a525;
 }
 
 @media all and (max-width: 992px) {
