--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
   background: #373A3C;
   top: 0;
   width: 100%;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,7 +72,7 @@
   height: 100%;
   position: fixed;
   background: #373A3C;
-  top: 80px;
+  top: 60px;
 }
 
 @media all and (max-width: 768px) {
