--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@
     background: #373A3C;
     top: 0;
     width: 100%;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -51,7 +52,7 @@
     position: fixed;
     background: #373A3C;
     // overflow: hidden;
-    top: 80px;
+    top: 60px;
     @media all and (max-width: 768px) {
         overflow: hidden;
     }
